--- a/Vignette.rmd
+++ b/Vignette.rmd
@@ -2,7 +2,9 @@
 title: "Analyzing data with PIO"
 author: "Vincent Alcazer"
 date: "`r Sys.Date()`"
-output: rmarkdown::html_vignette
+output: 
+  html_document:
+    self_contained: no
 vignette: >
   %\VignetteIndexEntry{Analyzing data with PIO}
   %\VignetteEngine{knitr::rmarkdown}
