--- a/Vignette.rmd
+++ b/Vignette.rmd
@@ -2,13 +2,14 @@
 title: "Analyzing data with PIO"
 author: "Vincent Alcazer"
 date: "`r Sys.Date()`"
-output: 
-  html_document:
-    self_contained: no
+output:
+  md_document:
+    variant: markdown_github
 vignette: >
   %\VignetteIndexEntry{Analyzing data with PIO}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
+always_allow_html: true
 ---
 
 ```{r setup, include = FALSE}
